@@ -10,9 +10,6 @@
      A mapping of integer status code to HTTP exception class (eg. the integer
      "401" maps to :class:`pyramid.httpexceptions.HTTPUnauthorized`).  All
      mapped exception classes are children of :class:`pyramid.httpexceptions`,
-     i.e. the :ref:`pyramid_specific_http_exceptions` such as
-     :class:`pyramid.httpexceptions.HTTPBadRequest.BadCSRFToken` are not
-     mapped.
 
   .. autofunction:: exception_response
 
@@ -109,13 +106,3 @@
   .. autoclass:: HTTPVersionNotSupported
 
   .. autoclass:: HTTPInsufficientStorage
-
-
-.. _pyramid_specific_http_exceptions:
-
-Pyramid-specific HTTP Exceptions
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-
-Each Pyramid-specific HTTP exception has the status code of it's parent.
-
-  .. autoclass:: HTTPBadCSRFToken
